[package]
name = "openai-query-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.13.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
util = {path = "../util/"}
